[package]
name = "example_lib_usage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.4"
anyhow = "1.0"
hadamard_sss = { git = "https://github.com/DimartX/hadamard-secret-sharing.git", version = "0.1.1" }
# hadamard_sss = { path = "/home/amder/MAI/Diploma/testlib", version = "0.1.1" }